--- a/README.rdoc
+++ b/README.rdoc
@@ -8,7 +8,7 @@ This is a Ruby on Rails site template using Html5boilerplate[http://github.com/p
 
 = Details
 
-HTML5Boilerplate[http://github.com/paulirish/html5-boilerplate is used as the HTML/CSS/JS base for a fast, robust and future-proof site. It's HTML is poured into app/views/layouts/application.html.erb and CSS into public/stylesheets/base.css. Instead of using HTML5Boilerplate's[http://github.com/paulirish/html5-boilerplate ant script for asset compression, Jammit[http://github.com/documentcloud/jammit] is used instead which fits in very nicely. jQuery.Page[http://github.com/Arwid/jQuery.Page] is used to make it very easy to add per-page Javascript.
+HTML5Boilerplate[http://github.com/paulirish/html5-boilerplate] is used as the HTML/CSS/JS base for a fast, robust and future-proof site. It's HTML is poured into app/views/layouts/application.html.erb and CSS into public/stylesheets/base.css. Instead of using HTML5Boilerplate's[http://github.com/paulirish/html5-boilerplate] ant script for asset compression, Jammit[http://github.com/documentcloud/jammit] is used instead which fits in very nicely. jQuery.Page[http://github.com/Arwid/jQuery.Page] is used to make it very easy to add per-page Javascript.
 
 Here is the core structure (excluding error pages):
 * public/
